# paig

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pom.xml  pyproject.toml  t
paig-authorizer-core/: CHANGELOG.md  README.md  local_build.sh  pyproject.toml  requirements.txt
paig-authorizer-core/paig_authorizer_core/: async_base_paig_authorizer.py  async_paig_authorizer.py  base_paig_authorizer.py  constants.py  paig_authorizer.py
paig-authorizer-core/paig_authorizer_core/filter/: base_metadata_filter_criteria_creator.py  base_vector_db_filter_creator.py  milvus_filter_creator.py  opensearch_filter_creator.py  snowflake_cortex_filter_creator.py  snowflake_cortex_metadata_filter_creator.py
paig-authorizer-core/paig_authorizer_core/models/: data_models.py  request_models.py  response_models.py
paig-authorizer-core/paig_authorizer_core/utils/: authorizer_response_utils.py  authorizer_utils.py
paig-authorizer-core/tests/: async_test_base_paig_authorizer.py  models.py  test_async_base_paig_authorizer.py  test_base_paig_authorizer.py
paig-authorizer-core/tests/filter/: test_base_metadata_filter_criteria_creator.py  test_base_vector_db_filter_creator.py  test_milvus_filter_creator.py  test_opensearch_filter_creator.py  test_snowflake_cortex_filter_creator.py  test_snowflake_cortex_metadata_filter_creator.py
paig-authorizer-core/tests/utils/: test_authorizer_response_utils.py  test_authorizer_utils.py
paig-client/: CHANGELOG.md  README.md  build.sh  build_pyarmor.sh  build_pyarmor_local.sh  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup_pyarmor_env.sh
paig-client/adhoc/: sample1.py  sample2.py  t1.py  t2.py  t3.py  t4.py
paig-client/adhoc/paig_conf/: paig-config.json
paig-client/backup/: build.sh
paig-client/plugin/: LICENSE  pyproject.toml
paig-client/plugin/tests/: plugin_config.json  test_context.py  test_message_enums.py
paig-client/scripts/: build_local.sh
paig-client/src/: README.md  run_unit_test.sh
paig-client/src/paig_client/: PluginAccessRequestEncryptor.py  backend.py  client.py  core.py  interceptor_setup.py  langchain_callback.py  langchain_method_interceptor.py  langchain_streaming_interceptor.py  model.py  util.py
paig-client/src/privacera_shield/: encryption.py  langchain_method_interceptor.py  message.py  milvus_method_interceptor.py
paig-client/src/tests/: common.py  conftest.py  pytest.ini  test_backend.py  test_client.py  test_context.py  test_core.py  test_encryption.py  test_langchain_interceptors.py  test_message_enums.py  test_utils.py
paig-client/tests/: conftest.py  test_backend.py  test_client.py  test_encryption.py  test_langchain_interceptors.py  test_utils.py
paig-client/tests/streaming/: test_llm_stream_access_checker.py
paig-common/: CHANGELOG.md  README.md  build.sh  pyproject.toml  requirements.txt  setup_pyarmor_env.sh  upgrade_version.py
paig-common/adhoc/: platform_tag.py
paig-common/src/: LICENSE  README.md  run_unit_test.sh
paig-common/src/paig_common/: async_base_rest_http_client.py  async_http_transport.py  audit_spooler.py  config_utils.py  constants.py  encryption.py  file_utils.py  http_transport.py  lru_cache.py  paig_exception.py  rbac_manager.py  response.py
paig-common/src/tests/: test_async_base_rest_http_client.py  test_async_http_transport.py  test_audit_spooler.py  test_config_utils.py  test_encryption.py  test_file_utils.py  test_http_transport.py  test_lru_cache.py  test_paig_exception.py  test_rbac_manager.py  test_response.py
paig-common/tests/: test_audit_spooler.py  test_config_utils.py  test_http_transport.py  test_lru_cache.py  test_rbac_manager.py
paig-evaluation/: CHANGELOG.md  README.md  pyproject.toml  run_tests.sh
paig-evaluation/paig_evaluation/: README.md  __init__.py  __main__.py  application_config.json  base_paig_eval.py  command_utils.py  config.py  constants.py  file_utils.py  logging_init.py  paig_eval.py  paig_eval_config.json  paig_evaluator.py  promptfoo_utils.py  requirements.txt  utils.py
paig-evaluation/paig_evaluation/conf/: default_config.yaml  security_plugins.json
paig-evaluation/scripts/: install_npm_dependencies.sh  package.json
paig-evaluation/tests/: test_command_utils.py  test_file_utils.py  test_generate_prompt_and_evaluate_calls.py  test_paig_evaluator.py  test_plugins_api_calls.py  test_promptfoo_util.py
paig-securechat/: CHANGELOG.md  GET_STARTED.md  README.md  pom.xml  pyproject.toml
paig-securechat/cypress/: README.md  cypress.config.js  package-lock.json  package.json  run_cypress.sh
paig-securechat/data/: sales_model.tgz
paig-securechat/docker/: Dockerfile  README.md  build_image.sh  docker-compose-local-with-opensearch-bedrock.yml  docker-compose-local.yml  docker-compose-with-local-milvus.yml  docker-compose-with-local-opensearch.yml  docker-compose-with-milvus-opensearch.yml  docker-compose.yml  run_docker.sh  start_securechat.sh
paig-securechat/docker/sample-custom-configs/: dev_bedrock_opensearch_config.yaml  dev_config.yaml  dev_openai_milvus_config.yaml  dev_openai_opensearch_config.yaml  dev_openai_opensearch_milvus_config.yaml  multi_AI_applications.json  openai.key
paig-securechat/docs/design/: index.html  openapi_paig_secure_chat.yaml
paig-securechat/nginx/: nginx.conf
paig-securechat/notebooks/: PaigSecureChat.ipynb  PaigSecureChatWithoutShield.ipynb  PrivaceraSecureChat.ipynb  PrivaceraSecureChatWithoutShield.ipynb
paig-securechat/scripts/: build_ui.sh  pre_pypi_build.sh  standalone_generate_api_key.py  standalone_hash_password_create.py
paig-securechat/web-server/: README.md  requirements.txt
paig-securechat/web-server/src/: README.md
paig-securechat/web-ui/: README.md  package-lock.json  package.json
paig-securechat/web-ui/public/: index.html
paig-securechat/web-ui/src/: App.scss  App.tsx  Header.tsx  (+6 more)
paig-server/: CHANGELOG.md  GET_STARTED.md  pyproject.toml
paig-server/automation/: ci.settings.json  cypress.config.js  local.settings.json  package-lock.json  package.json
paig-server/backend/: README.md  install_pkgs.sh  requirements.txt
paig-server/frontend/: README.md
(+1368 files in other folders)
