[project]
name = 'paig_opensource'
dynamic = ["version"]
readme = "backend/README.md"
license = {file = "LICENSE"}
description = 'PAIG Opensource'
requires-python = ">= 3.9"
keywords = [
    "Chatbot",
    "Governance",
    "Privacy",
    "Security",
    "PAIG",
    "PAIG-OPENSOURCE"
]
authors = [
  { name = "Privacera ", email = "support@privacera.com" },
]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi",
    "sqlalchemy",
    "alembic",
    "aiosqlite",
    "greenlet",
    "python-jose",
    "passlib",
    "bcrypt",
    "uvicorn",
    "pytz",
    "jproperties",
    "urllib3",
    "presidio-analyzer==2.2.353",
    "presidio-anonymizer==2.2.353",
    "cryptography==41.0.4",
    "boto3==1.34.20",
    "opentelemetry-distro==0.45b0",
    "opentelemetry-exporter-otlp==1.24.0",
    "privacera_shield_common==1.4.0",
    "alt-profanity-check",
    "numpy",
    "starlette-request-id",
    "httpx",
    "fasteners",
    "APScheduler",
    "pydantic[email]"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "https://github.com/pypa/privacera_paigopensource"
"Bug Tracker" = "https://github.com/pypa/privacera_paigopensource/issues"

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-cov',
    'pytest-asyncio',
    'pytest-mock',
    'uvicorn[standard]'
]

opensearch = [
    'opensearch-py',
    'boto3>=1.28.57'
]


[project.scripts]
paig_opensource = "paig.__main__:main"
paig-opensource = "paig.__main__:main"
paig = "paig.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["backend/paig"]
exclude = ["backend/paig/tests/"]


[tool.hatch.build]
include = ["backend/paig/*"]

[tool.hatch.build.targets.sdist]
exclude = ["backend/paig/tests/"]

[tool.hatch.version]
path = "backend/paig/VERSION"

