[project]
name = 'paig-authorizer-core'
dynamic = ["version"]
readme = "README.md"
license = {file = "../LICENSE"}
description = 'PAIG Authorizer Core'
requires-python = ">= 3.10"
keywords = [
    "Authorizer",
    "Governance",
    "Privacy",
    "Security",
    "PAIG",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.9.2"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "https://github.com/privacera/paig"
"Bug Tracker" = "https://github.com/privacera/paig/issues"

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-cov',
    'pytest-asyncio',
    'pytest-mock'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paig_authorizer_core"]
exclude = ["paig_authorizer_core/tests/"]

[tool.hatch.build]
include = ["paig_authorizer_core/*"]

[tool.hatch.build.targets.sdist]
exclude = ["paig_authorizer_core/tests/"]

[tool.hatch.version]
path = "VERSION"

