[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paig_client"]
exclude = ["src/paig_client/tests/"]


[tool.hatch.build]
include = ["src/paig_client/*"]

[tool.hatch.build.targets.sdist]
exclude = ["src/paig_client/tests/"]

[project]
name = "paig-client"
dynamic = ["version"]
authors = [
  { name = "Privacera ", email = "support@privacera.com" },
]
description = "PAIG Shield Client Library"
readme = "README.md"
license = {file = "../LICENSE"}
requires-python = ">=3.8.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "urllib3>=2.0.6",
    "cryptography>=41.0.4",
    "paig_common",
    "posthog"
]

[project.urls]
"Homepage" = "https://github.com/pypa/paig_client"
"Bug Tracker" = "https://github.com/pypa/paig_client/issues"

[tool.hatch.version]
path = "src/paig_client/VERSION"