[project]
name = 'paig-server'
dynamic = ["version"]
readme = "backend/README.md"
license = {file = "../LICENSE"}
description = 'PAIG Server'
requires-python = ">= 3.10"
keywords = [
    "Chatbot",
    "Governance",
    "Privacy",
    "Security",
    "PAIG",
    "PAIG-Server"
]
authors = [
  { name = "Privacera ", email = "support@privacera.com" },
]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi",
    "sqlalchemy",
    "alembic",
    "aiosqlite",
    "greenlet",
    "python-jose",
    "passlib",
    "bcrypt",
    "uvicorn",
    "pytz",
    "jproperties",
    "urllib3",
    "presidio-analyzer==2.2.353",
    "presidio-anonymizer==2.2.353",
    "cryptography==41.0.4",
    "boto3==1.34.20",
    "opentelemetry-distro==0.45b0",
    "opentelemetry-exporter-otlp==1.24.0",
    "paig_common",
    "alt-profanity-check==1.5.0",
    "numpy==1.26.4",
    "scipy==1.14.1",
    "starlette-request-id",
    "httpx",
    "fasteners",
    "APScheduler",
    "pydantic[email]",
    "posthog",
    "paig-authorizer-core",
    "psutil"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "https://github.com/privacera/paig"
"Bug Tracker" = "https://github.com/privacera/paig/issues"

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-cov',
    'pytest-asyncio',
    'pytest-mock',
    'uvicorn[standard]'
]

opensearch = [
    'opensearch-py',
    'boto3>=1.28.57'
]


[project.scripts]
paig = "paig.__main__:main"
paig_server = "paig.__main__:main"
paig-server = "paig.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["backend/paig"]
exclude = ["backend/paig/tests/"]


[tool.hatch.build]
include = ["backend/paig/*"]

[tool.hatch.build.targets.sdist]
exclude = ["backend/paig/tests/"]

[tool.hatch.version]
path = "backend/paig/VERSION"

