[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privacera_shield"
dynamic = ["version"]
authors = [
    { name = "PAIG Shield", email = "paig@privacera.com" },
]
description = "Privacera AI Governance (PAIG) Shield Plugin Library"
readme = "README.md"
requires-python = ">=3.8.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "urllib3>=2.0.6",
    "cryptography>=41.0.4",
    "privacera_shield_common==1.5.0.dev1+main.20240829.132316.1724937796"
]

[project.urls]
"Homepage" = "https://github.com/pypa/privacera_shield"
"Bug Tracker" = "https://github.com/pypa/privacera_shield/issues"

[tool.hatch.version]
path = "privacera_version.txt"
