[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paig-eval-service"
version = "0.0.1"
description = "Evaluation service module of PAIG"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name", email = "your@email.com" }]
license = { text = "MIT" }

dependencies = [
    "fastapi",
    "sqlalchemy",
    "alembic",
    "pydantic"
]

[tool.setuptools]
packages = ["paig_eval_service"]
include-package-data = true


[project.scripts]
paig-eval-service = "paig_eval_service.__main__:main"

[tool.setuptools.exclude-package-data]
paig_eval_service = [
  "tests/*",
  "scripts/*"
]